250412_1600 引用文献の簡素化

--- a/training.Rmd
+++ b/training.Rmd
@@ -12,7 +12,7 @@
 
 
 # Bookdownの再現 
-GitHubにある[修士のススメ]()のファイルをすべてダウンロード
+GitHubにある[修士のススメ](https://github.com/tabutan/GetStartedMaster.git)のファイルをすべてダウンロード。
 
 
 
