--- a/QuestionAnswer.Rmd
+++ b/QuestionAnswer.Rmd
@@ -7,3 +7,20 @@
  
  何のエラーなのかを確認し、修正したのち、Rmdを削除する。
  この場合、cslファイルが見つからないとあるので、プロジェクト内のcslファイルの名前を確認、修正し、修士のススメ.Rmdを削除する。
+ 
+## デフォルトと右上のペインにBuildが出てこない
+ 
+ 上にあるFile, Edit, Codeなどが並んでいるところの
+ Build > Configure Build Toolsを選択
+ 
+ Project Optionsが出てきたら、
+ 
+ Project build toolsでWebsiteを選択、
+ 
+ Book output formats(s)でbook::gitbookを選択しOK。
+ 
+ R Projectをいったん別のものに変更し、戻ると右上ペインにBuildが出現する。
+ 
+ 以後Buildするときは Win + Shift + BでBuild Bookする。
+ 
+ このgitbbokはひとつのプロジェクトに一つしか作れないぽい。そのため、レビューとかを作りたいときに使えるかも。
