とりあえずこれでGitBookを作れるはず

--- a/Appendix.Rmd
+++ b/Appendix.Rmd
@@ -48,5 +48,5 @@ knitr::include_graphics("image/option2.png")
 
 ```
 
-これは安心してPDFにできる。通学中心置きなく、PCを開かなくてもiPadにPDFを入れてオフライン状況下でも見返せる。レビューとデータ解析を別々のRMarkdownで出力することもできる。
+これは安心してPDFにできる。iPadにPDFを入れておけば、通学中、PCを開くことなく、オフライン状況下でも心おきなく見返せる。レビューとデータ解析を別々のRMarkdownで出力することもできる。
 RMarkdownのオプションは本当に多いが、これが今のところ知っている中で、シンプルかつ便利なものである。
