--- a/training.Rmd
+++ b/training.Rmd
@@ -1,30 +1,79 @@
-# 章立てをする
-\#の数だけ階層を変えられる。
+# トレーニング
+## デスクトップにフォルダーを作る
+マイクロソフトなどのクラウドと同期されていると、Rの挙動に予期せぬバグが生じることがある。まずは同期されていないことを確認し、されている場合は、切断しよう。
 
-> \# 章
-> \#\# 節
-> \#\#\# 項
-> \#\#\#\# 次
+Desktopに新しく「R files」フォルダーを作成し、その後R Studioを立ち上げる。
 
-## 節
-### 項
-#### 次
+## RでProjectを立ち上げる
+右上にあるProject:(None)をクリックし、一番上のNew Projectをクリック、<br>
+New Directory > New Project<br>
+と進み、Directory nameにすきな名前をつける。日本語にするとバグが起こることがあるので、アルファベットが無難。
+
+Create project as subdirectory of: のところに
+「C:/Users/〇〇〇/Desktop/R files」と表示されればOK（〇〇〇はPCの名前であり、人それぞれ）。<br>
+されていない場合は、BrowseボタンからR filesを指定する。
 
 
-# Bookdownの再現 
-## 練習ファイルのダウンロード
+
+## Bookdownの再現 
+### 練習ファイルのダウンロード
 GitHubにある[修士のススメ](https://github.com/tabutan/GetStartedMaster.git)にある「練習用ファイル一覧」フォルダーをダウンロード。
 
-Knitしてみると、本サイトの「0 はじめに」と同じものが表示されるはずである。
-ここで表示されている内容は[ヤクシマザルという生き物を知りたい](https://tabutan.github.io/yakuzaru/)にあるものと同じものです。
+R Projectと同じレイヤーにファイルを置く。図 \@ref(fig:downroad)のようになっていたらOK。
+「xxx」はプロジェクト名なので、人それぞれ命名したものになる。
 
-## Build Bookしてみよう
+```{r downroad, echo=FALSE, fig.cap="ダウンロードしたファイルの置き場はR Projectと同じレイヤーにする", out.width="80%"}
+
+knitr::include_graphics("image/filedownroad.png")
+
+```
+
+
+Knitしてみると、本サイトの「0 はじめに」と同じものが表示されるはずである。
+ここで表示されている内容は「[ヤクシマザルという生き物を知りたい](https://tabutan.github.io/yakuzaru/)」にあるものと同じものです。
+
+### Build Bookしてみよう
 一応KnitでもHTMLが出現したと思うが、GitBookの場合はエラーの元（例えば、ある章を閲覧できないなど）。Q & AにあるGitBookの立ち上げ方を読み、Build Bookしてみよう。
 
 
-# 文章を書く練習
+## 新しいRmarkdownファイルを作成
+左上にある緑の背景に白の十字のアイコンをクリック、Rmarkdownを選択。<br>
+すべてデフォルトのままOKをクリック。
 
-## 太字、イタリック
+新しく作ったRmarkdownファイルをセーブして、名前を付ける。
+その後、一旦そのファイル内の記述をすべて削除して、何か好きなことを書いてみる。
+その後、_bookdown.ymlを開き、その中に「rmd_files:」が以下のようになっているはず。
+
+>rmd_files:                    
+  &nbsp;&nbsp;&nbsp;&nbsp;- index.Rmd<br>
+  &nbsp;&nbsp;&nbsp;&nbsp;- sessioninfo.Rmd<br>
+  
+このリストの中に自分で作ったRmarkdownファイルの名前を入れよう。
+
+>rmd_files:                
+  &nbsp;&nbsp;&nbsp;&nbsp;- index.Rmd<br>
+  &nbsp;&nbsp;&nbsp;&nbsp;- xyzw.Rmd<br>
+  &nbsp;&nbsp;&nbsp;&nbsp;- sessioninfo.Rmd<br>
+  
+Build Bookすると自分のRmarkdownの内容が反映されているはず。
+
+## 章立てをする
+\#の数だけ階層を変えられる。#の後に半角スペースを入れることを忘れずに。
+
+> \# 章<br>
+> \#\# 節<br>
+> \#\#\# 項<br>
+> \#\#\#\# 次<br>
+
+
+### わっしょい
+#### ほいさほいさ
+
+
+## 文章を書く
+文章を書く際に、ワードのようにできない。Markdownの記法で表現する必要がある。ここではよく使うものを練習してみよう。
+
+### 太字、イタリック
 文章はそのまま書けばOK。
 
 太字は、太字にしたい部分を\_\_または\*\*で囲めばOK。
@@ -42,7 +91,7 @@ __ぽよよん__
 
 *italic*、_italic_、*字体によってイタリックに見えないものあり！*
 
-## 箇条書き
+### 箇条書き
 半角でマイナス記号、半角スペース　<br>
 箇条書きの中の箇条書き：tabキー押して、半角でマイナス記号、半角スペース
 
@@ -52,30 +101,30 @@ __ぽよよん__
   - のんびりできないし
   - すんなりいかない
   - スケジュール
-  - 目指せ修士号取得
+  - 目指せRマスター
   
-## 数式
+### 数式
 文章中の数式は\$で囲む。
 
 > 個体追跡法でアカンボウを行動観察した（\$N=12\$、\$n=225\$）。
 
 個体追跡法でアカンボウを行動観察した（$N=12$、$n=225$）。
 
-### 下付き文字、上付き文字
+#### 下付き文字、上付き文字
 \$で囲んで、下付きにしたい文字をアンダーバーと{}で括る。1文字なら{}は省略可。上付き文字はアンダーバーの代わりに^を使う。
 
 > \$N_a\$、\$N^a\$、\$N_{修士のススメ参加者}=7\$
 
 $N_a$、$N^a$、$N_{修士のススメ参加者}=7$
 
-## コメントアウト
+### コメントアウト
 隠したい文章は、「\<!-- 〇〇 \-->」でコメントアウトできる 
 
 > \<!-- 見られたくない、見られたくない \-->、無事消えたかな？
 
 <!-- 見られたくない、見られたくない -->、無事消えたかな？
 
-## 引用文献
+### 引用文献
 >ヤクシマザルは他地域のニホンザルより体毛が黒い [\@hamada1992]
 
 ヤクシマザルは他地域のニホンザルより体毛が黒い [@hamada1992]
@@ -99,8 +148,9 @@ volume = {84},<br>
 number = {7},<br>
 pages = {e23392},
 
-title = {xxxxxxx}担っているところをtitle ={{xxxxx}}に変更してみよう。小文字が大文字に変更されているはず。
+title = {xxxxxxx}になっているところをtitle ={{xxxxx}}に変更してみよう。小文字が正しく大文字に変更されているはず。
 
 次に、イタリック。
 
-イタリックにしたい箇所を\\textit{xxxxx}で囲ってみよう。種名がイタリックになっているはず。
+イタリックにしたい箇所であるMacaca fuscataを\\textit{Macaca fuscata}というように書いてみよう。種名がイタリックになっているはず。
+HP上は￥のマークになっているが、Ｒコード上はバックスラッシュであることに注意。
