コメントアウトの修正

--- a/referenceGetStertedMaster.bib
+++ b/referenceGetStertedMaster.bib
@@ -80,7 +80,7 @@ affecting reproductive outcome},
 
 @article{hikida2022,
    author = {Hikida, K.},
-   title = {Eyeblink rate as an indicator of concentration on grooming in Japanese macaques (Macaca fuscata)},
+   title = {{Eyeblink rate as an indicator of concentration on grooming in Japanese macaques (\textit{Macaca fuscata})}},
    journal = {American Journal of Primatology},
    volume = {84},
    number = {7},
