--- a/training.Rmd
+++ b/training.Rmd
@@ -87,13 +87,34 @@ __ぽよよん__
 
 イタリックは\_または\*で囲む。
 
-> \*italic\*、\_italic\_、\*字体によってイタリックに見えないものあり！\*
+> \*italic\*、\_italic\_、\*字体によってイタリックに見えないものあり！\*<br>
+霊長類の雑誌は、<br>
+*Primates*<br>
+*International Journal of Primatology*<br>
+*American Journal of Primatology*<br>
+*Folia Primatologica*<br>
+の４つ。
 
 *italic*、_italic_、*字体によってイタリックに見えないものあり！*
+
+霊長類の雑誌は、<br>
+*Primates*<br>
+*International Journal of Primatology*<br>
+*American Journal of Primatology*<br>
+*Folia Primatologica*<br>
+の４つ。
 
 ### 箇条書き
 半角でマイナス記号、半角スペース　<br>
 箇条書きの中の箇条書き：tabキー押して、半角でマイナス記号、半角スペース
+
+> \- 箇条書き<br>
+  \- 修士向け<br>
+  \- 知らなくても大丈夫<br>
+  \- のんびりできないし<br>
+  \- すんなりいかない<br>
+  \- スケジュール<br>
+  \- 目指せRマスター<br>
 
 - 箇条書き
   - 修士向け
@@ -102,6 +123,25 @@ __ぽよよん__
   - すんなりいかない
   - スケジュール
   - 目指せRマスター
+
+
+数字でもできる。
+
+> \- 箇条書き<br>
+  \1. 修士向け<br>
+  \1. 知らなくても大丈夫<br>
+  \1. のんびりできないし<br>
+  \1. すんなりいかない<br>
+  \1. スケジュール<br>
+  \1. 目指せRマスター<br>
+
+- 箇条書き
+  1. 修士向け
+  1. 知らなくても大丈夫
+  1. のんびりできないし
+  1. すんなりいかない
+  1. スケジュール
+  1. 目指せRマスター
   
 ### 数式
 文章中の数式は\$で囲む。
@@ -118,7 +158,8 @@ __ぽよよん__
 $N_a$、$N^a$、$N_{修士のススメ参加者}=7$
 
 ### コメントアウト
-隠したい文章は、「\<!-- 〇〇 \-->」でコメントアウトできる 
+隠したい文章は、「\<!\-\- 〇〇 \-\->」でコメントアウトできる。<br>
+ショートカットキーは、「ctrl + shift + C」。
 
 > \<!-- 見られたくない、見られたくない \-->、無事消えたかな？
 
