図示の修正

--- a/training.Rmd
+++ b/training.Rmd
@@ -199,9 +199,10 @@ HP上は￥のマークになっているが、Ｒコード上はバックスラ
 
 ## Rコードを書く
 
-「ctrl + alt + I」のショートカットキーを使うと、Rコードを入力するための灰色の領域が表示される。
+「ctrl + alt + I」のショートカットキーを使うと、Rコードを入力するための灰色の領域が表示される。<br>
+Rに内蔵されているmpgデータを使って図示できただろうか（図 \@ref(fig:mpg)）。
 
-```{r}
+```{r mpg, fig.cap="mpgデータの図示"}
 # パッケージの読み込み
 library(tidyverse)
 
