引用文献の情報追加

--- a/training.Rmd
+++ b/training.Rmd
@@ -167,8 +167,10 @@ $N_a$、$N^a$、$N_{修士のススメ参加者}=7$
 
 ### 引用文献
 >ヤクシマザルは他地域のニホンザルより体毛が黒い [\@hamada1992]
+>\@hamada1992 はヤクシマザルは他地域のニホンザルより体毛が黒いことを明らかにした。 
 
-ヤクシマザルは他地域のニホンザルより体毛が黒い [@hamada1992]
+ヤクシマザルは他地域のニホンザルより体毛が黒い [@hamada1992]<br>
+@hamada1992 はヤクシマザルは他地域のニホンザルより体毛が黒いことを明らかにした。
 
 > ニホンザルの研究はいろいろある [\@hamada1992; \@hikida2022]
 
