引用文献情報の修正

--- a/training.Rmd
+++ b/training.Rmd
@@ -166,7 +166,7 @@ $N_a$、$N^a$、$N_{修士のススメ参加者}=7$
 <!-- 見られたくない、見られたくない -->、無事消えたかな？
 
 ### 引用文献
->ヤクシマザルは他地域のニホンザルより体毛が黒い [\@hamada1992]
+>ヤクシマザルは他地域のニホンザルより体毛が黒い [\@hamada1992]<br>
 >\@hamada1992 はヤクシマザルは他地域のニホンザルより体毛が黒いことを明らかにした。 
 
 ヤクシマザルは他地域のニホンザルより体毛が黒い [@hamada1992]<br>
