箇条書きの情報追加

--- a/training.Rmd
+++ b/training.Rmd
@@ -138,12 +138,12 @@ __ぽよよん__
 数字でもできる。
 
 > \- 箇条書き<br>
-  \1. 修士向け<br>
-  \1. 知らなくても大丈夫<br>
-  \1. のんびりできないし<br>
-  \1. すんなりいかない<br>
-  \1. スケジュール<br>
-  \1. 目指せRマスター<br>
+  1. 修士向け<br>
+  1. 知らなくても大丈夫<br>
+  1. のんびりできないし<br>
+  1. すんなりいかない<br>
+  1. スケジュール<br>
+  1. 目指せRマスター<br>
 
 - 箇条書き
   1. 修士向け
