--- a/練習用ファイル一覧/referenceGetStertedMaster.bib
+++ b/練習用ファイル一覧/referenceGetStertedMaster.bib
@@ -109,3 +109,16 @@ nonhuman primate},
    year = {2022},
    type = {Journal Article}
 }
+
+@article{vehtari2021,
+   author = {Vehtari, Aki and Gelman, Andrew and Simpson, Daniel and Carpenter, Bob and Bürkner, Paul-Christian},
+   title = {Rank-Normalization, Folding, and Localization: An Improved Rˆ for Assessing Convergence of MCMC (with Discussion)},
+   journal = {Bayesian Analysis},
+   volume = {16},
+   number = {2},
+   ISSN = {1936-0975},
+   DOI = {10.1214/20-ba1221},
+   year = {2021},
+   type = {Journal Article}
+}
+
